src/client/components/molecules/office-contact-modal/office-contact-modal.scss
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 99999999;
  background-color: rgba(0, 0, 0, 0.4);
}

.content {
  position: absolute;
  left: 0;
  right: 0;
  outline: none;
  margin: 20px auto 0;
  max-width: 650px;
  max-height: calc(100vh - 50px);
  overflow-y: auto;
  overflow-x: hidden;
  background-color: $sba-white;
  display: flex;
  justify-content: center;
  border-top: 8px solid $sba-blue;
  @include grid-media($sba-grid-small) {
    margin: 0 0 0;
    border-top: 0px;
  }
}

.exitIcon {
  width: 30px;
  height: 30px;
  color: $sba-gray-dark;
  border-radius: 1px;
  cursor: pointer;

  @include grid-media($sba-grid-small) {
    width: 20px;
    height: 20px;
  }
}

.imgContainer {
  position: absolute;
  top: 25px;
  right: 30px;
  height: 30px;

  @include grid-media($sba-grid-small) {
    top: 15px;
    right: 20px;
  }
}

.title {
  font-weight: 600;
  text-align: center;
  font-size: 27px;
  margin-top: 30px;

  @include grid-media($sba-grid-small) {
    font-size: 22px;
  }
}

.officeName {
  text-align: center;
  font-weight: 600;
  color: $secondary-black-ish;
  font-size: 18px;
}

.divider {
  border-top: 3px solid $sba-red;
  width: 142px;
  margin: 0 auto 20px;
}

.form {
  max-width: 550px;
  padding-bottom: 30px;
  @include grid-media($sba-grid-small) {
    padding-bottom: 15vh;
  }
}

.details {
  max-height: 100px;
  min-height: 100px;
  margin-bottom: 4px;
}

.topicDropdown {
  margin-bottom: 20px;
  p {
    margin-top: 4px;
  }
}

.reactSelect {
  &:global(.Select.is-focused > .Select-control) {
    border: 1px solid $sba-gray-dark !important;
  }
}

.btnContainer {
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: center;
  padding-top: 30px;
}

.btnContent {
  width: 122px;
  height: 56px;

  &:last-of-type {
    margin-left: 40px;
  }
}

.input,
.label {
  margin-bottom: 0;
}

.label {
  font-weight: 600;
  margin-bottom: 0;
  color: $sba-blue-dark;
}

.checkboxLabel {
  color: $secondary-black-ish;
  font-size: 18px;
}

.checkboxContainer {
  margin-left: 36px;
  width: 330px;
  margin-top: 15px;
}

.recaptchaContainer {
  display: flex;
  width: 100%;
  flex-direction: column;
  justify-content: center;
  margin-top: 20px;
}

.recaptchaError {
  color: $sba-red-dark;
  font-size: 16px;
  margin-top: 4px;
  margin-bottom: 0;
  font-weight: 600;
}

